--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -57,6 +57,7 @@ Metrics/AbcSize:
   Exclude:
     - 'lib/red_amber/data_frame_displayable.rb' # Max: 55
     - 'lib/red_amber/data_frame_selectable.rb' # Max: 27
+    - 'lib/red_amber/data_frame_variable_operation.rb' # Max: 29
 
 # Max: 25
 Metrics/BlockLength:
@@ -79,6 +80,7 @@ Metrics/MethodLength:
   Max: 18
   Exclude:
     - 'lib/red_amber/data_frame_displayable.rb' # Max: 33
+    - 'lib/red_amber/data_frame_variable_operation.rb' # Max: 23
 
 # Max: 100
 Metrics/ModuleLength:
