--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -82,6 +82,7 @@ Metrics/MethodLength:
   Exclude:
     - 'lib/red_amber/data_frame_displayable.rb' # Max: 33
     - 'lib/red_amber/data_frame_observation_operation.rb' # Max: 21
+    - 'lib/red_amber/data_frame_variable_operation.rb' # Max: 20
 
 # Max: 100
 Metrics/ModuleLength:
