--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,4 +33,4 @@ jobs:
       # bundler-cache: true
       run: bundle install
     - name: Run test
-      run: bundle exec rake test
+      run: TZ=Asia/Tokyo bundle exec rake test
