--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -56,6 +56,7 @@ Metrics/AbcSize:
   Max: 30
   Exclude:
     - 'lib/red_amber/data_frame_displayable.rb' # Max: 55
+    - 'lib/red_amber/data_frame_selectable.rb' # Max: 51
     - 'lib/red_amber/vector_updatable.rb' # Max: 36
     - 'lib/red_amber/vector_selectable.rb' # Max: 33
 
@@ -77,6 +78,7 @@ Metrics/ClassLength:
 Metrics/CyclomaticComplexity:
   Max: 12
   Exclude:
+    - 'lib/red_amber/data_frame_selectable.rb' # Max: 14
     - 'lib/red_amber/vector_updatable.rb' # Max: 14
 
 # Max: 10
@@ -96,6 +98,7 @@ Metrics/ModuleLength:
 Metrics/PerceivedComplexity:
   Max: 13
   Exclude:
+    - 'lib/red_amber/data_frame_selectable.rb' # Max: 14
     - 'lib/red_amber/vector_updatable.rb' # Max: 15
 
 # Necessary to define is_na, is_in, etc.
