--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -63,6 +63,7 @@ Metrics/AbcSize:
     - 'lib/red_amber/data_frame_displayable.rb' # Max: 55
     - 'lib/red_amber/data_frame_reshaping.rb' # Max 40.91
     - 'lib/red_amber/data_frame_selectable.rb' # Max: 51
+    - 'lib/red_amber/data_frame_variable_operation.rb' # Max: 30.15
     - 'lib/red_amber/vector_updatable.rb' # Max: 36
     - 'lib/red_amber/vector_selectable.rb' # Max: 33
 
@@ -86,6 +87,7 @@ Metrics/CyclomaticComplexity:
   Exclude:
     - 'lib/red_amber/data_frame_displayable.rb' # Max: 18
     - 'lib/red_amber/data_frame_selectable.rb' # Max: 14
+    - 'lib/red_amber/helper.rb' # Max: 15
     - 'lib/red_amber/vector_selectable.rb' # Max: 13
     - 'lib/red_amber/vector_updatable.rb' # Max: 14
 
@@ -111,6 +113,7 @@ Metrics/PerceivedComplexity:
   Max: 13
   Exclude:
     - 'lib/red_amber/data_frame_selectable.rb' # Max: 14
+    - 'lib/red_amber/helper.rb' # Max: 15
     - 'lib/red_amber/vector_updatable.rb' # Max: 15
     - 'lib/red_amber/data_frame_displayable.rb' # Max: 19
 
