:zap: Add Group#each, #inspect

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -80,6 +80,7 @@ Metrics/ClassLength:
     - 'test/**/*'
     - 'lib/red_amber/data_frame.rb' #Max: 131
     - 'lib/red_amber/vector.rb' #Max: 102
+    - 'lib/red_amber/group.rb' #Max: 103
 
 # Max: 7
 Metrics/CyclomaticComplexity:
