:zap: Add DataFrame#left_join method

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -108,6 +108,7 @@ Metrics/ModuleLength:
     - 'lib/red_amber/data_frame_selectable.rb' # Max: 141
     - 'lib/red_amber/data_frame_variable_operation.rb' # Max: 110
     - 'lib/red_amber/vector_functions.rb' # Max: 114
+    - 'lib/red_amber/data_frame_combinable.rb' # Max: 108
 
 # Max: 8
 Metrics/PerceivedComplexity:
