--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,9 +25,8 @@ jobs:
         wget https://apache.jfrog.io/artifactory/arrow/$(lsb_release --id --short | tr 'A-Z' 'a-z')/apache-arrow-apt-source-latest-$(lsb_release --codename --short).deb
         sudo apt install -y -V ./apache-arrow-apt-source-latest-$(lsb_release --codename --short).deb
         sudo apt update
-        sudo apt install -y -V libarrow-dev=9.0.0-1
-        sudo apt install -y -V gir1.2-arrow-1.0=9.0.0-1
-        sudo apt install -y -V libarrow-glib-dev=9.0.0-1
+        sudo apt install -y -V libarrow-dev
+        sudo apt install -y -V libarrow-glib-dev
     - name: Set up Ruby ${{ matrix.ruby }}
       uses: ruby/setup-ruby@v1
       with:
