--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
         sudo apt install -y -V ./apache-arrow-apt-source-latest-$(lsb_release --codename --short).deb
         sudo apt update
         sudo apt install -y -V libarrow-dev
+        sudo apt install -y -V gir1.2-arrow-1.0
         sudo apt install -y -V libarrow-glib-dev
     - name: Set up Ruby ${{ matrix.ruby }}
       uses: ruby/setup-ruby@v1
