--- a/benchmark/rover/csv_load_penguins.yml
+++ b/benchmark/rover/csv_load_penguins.yml
@@ -2,12 +2,12 @@ prelude: |
   require 'rover'
   require 'red_amber'
 
-  penguins_csv = 'benchmark/cache/penguins.csv'
+  penguins_csv = 'tmp/penguins.csv'
 
   unless File.exist?(penguins_csv)
     require 'datasets-arrow'
-    arrow = Datasets::Penguins.new.to_arrow
-    RedAmber::DataFrame.new(arrow).save(penguins_csv)
+    ds = Datasets::Penguins.new
+    RedAmber::DataFrame.new(ds).save(penguins_csv)
   end
 
 benchmark:
