--- a/benchmark/reshape.yml
+++ b/benchmark/reshape.yml
@@ -5,6 +5,8 @@ contexts:
     prelude: |
       $LOAD_PATH.unshift(File.expand_path('lib'))
   - gems:
+      red_amber: 0.2.3
+  - gems:
       red_amber: 0.2.2
 
 prelude: |
