--- a/benchmark/combine.yml
+++ b/benchmark/combine.yml
@@ -6,8 +6,8 @@ contexts:
   - name: HEAD
     prelude: |
       $LOAD_PATH.unshift(File.expand_path('lib'))
-  # - gems:
-  #     red_amber: 0.2.3
+  - gems:
+      red_amber: 0.2.3
 
 prelude: |
   require 'red_amber'
