:recycle: Refactor DataFrame#pick/#drop by refininig Array

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -82,6 +82,7 @@ Metrics/AbcSize:
     'slice_by', # 38.29
     'remove', # 44.42
     'drop', # 31.42
+    '_parse_element', # 35.96
   ]
 
 # Max: 25
@@ -117,6 +118,7 @@ Metrics/CyclomaticComplexity:
     'remove', # 14
     'normalize_element', # 17
     '[]', # 13
+    '_parse_element', # 21
   ]
 
 # Max: 10
@@ -130,6 +132,7 @@ Metrics/MethodLength:
     'format_table', # 53
     'slice_by', # 38
     'assign_update', # 35
+    '_parse_element', # 34
   ]
 
 # Max: 100
@@ -166,6 +169,7 @@ Metrics/PerceivedComplexity:
     'filters', # 11
     'normalize_element', # 17
     '[]', # 11
+    '_parse_element', # 17
   ]
 
 # Offense count: 1
