--- a/benchmark/combine.yml
+++ b/benchmark/combine.yml
@@ -3,11 +3,11 @@
 loop_count: 3
 
 contexts:
+  - gems:
+      red_amber: 0.2.3 # as a standard of loop_count
   - name: HEAD
     prelude: |
       $LOAD_PATH.unshift(File.expand_path('lib'))
-  - gems:
-      red_amber: 0.2.3
 
 prelude: |
   require 'red_amber'
