:white_check_mark: Update benchmark contexts and loop_count

--- a/benchmark/reshape.yml
+++ b/benchmark/reshape.yml
@@ -1,13 +1,15 @@
-# --repeat-count 3
+loop_count: 3
 
 contexts:
-  - gems:
-      red_amber: 0.2.2 # as a standard of loop_count
   - name: HEAD
     prelude: |
       $LOAD_PATH.unshift(File.expand_path('lib'))
-  - gems:
+  - name: 0.2.3
+    gems:
       red_amber: 0.2.3
+  - name: 0.2.2
+    gems:
+      red_amber: 0.2.2
 
 prelude: |
   require 'red_amber'
