--- a/benchmark/basic.yml
+++ b/benchmark/basic.yml
@@ -1,12 +1,17 @@
+loop_count: 3
+
 contexts:
-  - gems:
-      red_amber: 0.2.0 # as a standard of loop_count
   - name: HEAD
     prelude: |
       $LOAD_PATH.unshift(File.expand_path('lib'))
-  - gems:
+  - name: 0.2.3
+    gems:
       red_amber: 0.2.3
-  - gems:
+  - name: 0.2.0
+    gems:
+      red_amber: 0.2.0
+  - name: 0.1.5
+    gems:
       red_amber: 0.1.5
 
 prelude: |
