--- a/benchmark/combine.yml
+++ b/benchmark/combine.yml
@@ -1,13 +1,12 @@
-# --repeat-count 3
-
 loop_count: 3
 
 contexts:
-  - gems:
-      red_amber: 0.2.3 # as a standard of loop_count
   - name: HEAD
     prelude: |
       $LOAD_PATH.unshift(File.expand_path('lib'))
+  - name: 0.2.3
+    gems:
+      red_amber: 0.2.3
 
 prelude: |
   require 'red_amber'
