--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -82,7 +82,6 @@ Metrics/AbcSize:
     'slice_by', # 38.29
     'remove', # 44.42
     'drop', # 31.42
-    'parse_args', # 33.11
   ]
 
 # Max: 25
@@ -119,7 +118,7 @@ Metrics/CyclomaticComplexity:
     'remove', # 14
     'normalize_element', # 17
     '[]', # 13
-    'parse_args', # 21
+    'parse_range', # 14
   ]
 
 # Max: 10
@@ -133,7 +132,6 @@ Metrics/MethodLength:
     'format_table', # 53
     'slice_by', # 38
     'assign_update', # 35
-    'parse_args', # 34
   ]
 
 # Max: 100
@@ -170,7 +168,7 @@ Metrics/PerceivedComplexity:
     'filters', # 11
     'normalize_element', # 17
     '[]', # 11
-    'parse_args', # 18
+    'parse_range', # 15
   ]
 
 # Offense count: 1
