--- a/.github/workflows/fedora.yml
+++ b/.github/workflows/fedora.yml
@@ -16,11 +16,12 @@ jobs:
         run: |
           echo 'FROM fedora:38' >> Dockerfile
           echo 'RUN sudo dnf -y update' >> Dockerfile
+          echo 'WORKDIR /' >> Dockerfile
           echo 'RUN sudo dnf -y install git gcc-c++ libarrow-devel libarrow-glib-devel ruby-devel' >> Dockerfile
           echo 'RUN sudo dnf clean all' >> Dockerfile
           echo 'RUN git clone https://github.com/heronshoes/red_amber.git' >> Dockerfile
           echo 'RUN cd red_amber' >> Dockerfile
           echo 'RUN bundle install' >> Dockerfile
           echo 'RUN TZ=Asia/Tokyo bundle exec rake test' >> Dockerfile # set TZ to ensure the test using timestamp
-          sudo podman build --tag fedora:38 -f ./Dockerfile
-          sudo podman run --privileged --name fedora38-test localhost/fedora:38 /bin/bash
+          sudo podman build --tag fedora:38text -f ./Dockerfile
+          sudo podman run --name fedora38-test -rm fedora:38test
