--- a/.github/workflows/fedora.yml
+++ b/.github/workflows/fedora.yml
@@ -15,13 +15,14 @@ jobs:
       - name: Create and run container
         run: |
           echo 'FROM fedora:38' >> Dockerfile
-          echo 'RUN sudo dnf -y update' >> Dockerfile
-          echo 'WORKDIR /' >> Dockerfile
-          echo 'RUN sudo dnf -y install git gcc-c++ libarrow-devel libarrow-glib-devel ruby-devel' >> Dockerfile
-          echo 'RUN sudo dnf clean all' >> Dockerfile
-          echo 'RUN git clone https://github.com/heronshoes/red_amber.git' >> Dockerfile
-          echo 'RUN cd red_amber' >> Dockerfile
-          echo 'RUN bundle install' >> Dockerfile
-          echo 'RUN TZ=Asia/Tokyo bundle exec rake test' >> Dockerfile # set TZ to ensure the test using timestamp
-          sudo podman build --tag fedora:38text -f ./Dockerfile
+          echo 'RUN echo $PWD' >> Dockerfile
+          #echo 'RUN sudo dnf -y update' >> Dockerfile
+          #echo 'WORKDIR /' >> Dockerfile
+          #echo 'RUN sudo dnf -y install git gcc-c++ libarrow-devel libarrow-glib-devel ruby-devel' >> Dockerfile
+          #echo 'RUN sudo dnf clean all' >> Dockerfile
+          #echo 'RUN git clone https://github.com/heronshoes/red_amber.git' >> Dockerfile
+          #echo 'RUN cd red_amber' >> Dockerfile
+          #echo 'RUN bundle install' >> Dockerfile
+          #echo 'RUN TZ=Asia/Tokyo bundle exec rake test' >> Dockerfile # set TZ to ensure the test using timestamp
+          sudo podman build --tag fedora:38test -f ./Dockerfile
           sudo podman run --name fedora38-test -rm fedora:38test
