--- a/.github/workflows/fedora.yml
+++ b/.github/workflows/fedora.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
           podman images
           podman --version
-          #podman run --name:fedora-rawhide-test fedora:38 /bin/bash echo $PWD
+          podman run fedora:38 /bin/bash echo $PWD
           #echo 'FROM fedora:38' >> Dockerfile
           #echo 'RUN echo $PWD' >> Dockerfile
           #echo 'RUN sudo dnf -y update' >> Dockerfile
