--- a/.github/workflows/fedora.yml
+++ b/.github/workflows/fedora.yml
@@ -17,7 +17,14 @@ jobs:
         run: |
           podman images
           podman --version
-          podman run fedora:38 dnf -y update
+          podman run fedora:38 \
+            dnf -y update && \
+            dnf -y install git gcc-c++ libarrow-devel libarrow-glib-devel ruby-devel && \
+            dnf clean all && \
+            git clone https://github.com/heronshoes/red_amber.git && \
+            cd red_amber && \
+            bundle install && \
+            TZ=Asia/Tokyo bundle exec rake test # set TZ to ensure the test using timestamp
           #echo 'FROM fedora:38' >> Dockerfile
           #echo 'RUN echo $PWD' >> Dockerfile
           #echo 'RUN sudo dnf -y update' >> Dockerfile
