--- a/.github/workflows/fedora.yml
+++ b/.github/workflows/fedora.yml
@@ -18,9 +18,9 @@ jobs:
           podman images
           podman --version
           podman run fedora:38 \
-            dnf -y update && \
+            #dnf -y update && \
             dnf -y install git gcc-c++ libarrow-devel libarrow-glib-devel ruby-devel && \
-            dnf clean all && \
+            #dnf clean all && \
             git clone https://github.com/heronshoes/red_amber.git && \
             cd red_amber && \
             bundle install && \
