--- a/.github/workflows/fedora.yml
+++ b/.github/workflows/fedora.yml
@@ -23,7 +23,7 @@ jobs:
             #gcc-c++ libarrow-devel libarrow-glib-devel ruby-devel && \
             #dnf clean all && \
             git clone https://github.com/heronshoes/red_amber.git && \
-            cd red_amber && \
+            cd red_amber #&& \
             #bundle install && \
             #TZ=Asia/Tokyo bundle exec rake test # set TZ to ensure the test using timestamp
           #echo 'FROM fedora:38' >> Dockerfile
