--- a/.github/workflows/fedora.yml
+++ b/.github/workflows/fedora.yml
@@ -18,10 +18,10 @@ jobs:
           podman images
           podman --version
           podman run --privileged fedora:38 \
-            dnf -y install git && \
+            dnf -y install git gcc-c++ libarrow-devel libarrow-glib-devel ruby-devel && \
             git clone https://github.com/heronshoes/red_amber.git && \
-            cd red_amber #&& \
-            #bundle install && \
+            cd red_amber && \
+            bundle install #&& \
             #TZ=Asia/Tokyo bundle exec rake test # set TZ to ensure the test using timestamp
           #echo 'FROM fedora:38' >> Dockerfile
           #echo 'RUN echo $PWD' >> Dockerfile
