--- a/.github/workflows/fedora.yml
+++ b/.github/workflows/fedora.yml
@@ -18,7 +18,7 @@ jobs:
           podman images
           podman --version
           podman run --privileged fedora:38 \
-            dnf -y install git gcc-c++ libarrow-devel libarrow-glib-devel ruby-devel && \
+            dnf -y install git gcc-c++ libarrow-devel libarrow-glib-devel ruby-devel rubygem-bundler && \
             git clone https://github.com/heronshoes/red_amber.git && \
             cd red_amber && \
             bundle install #&& \
