--- a/.github/workflows/fedora.yml
+++ b/.github/workflows/fedora.yml
@@ -18,8 +18,9 @@ jobs:
           podman images
           podman --version
           podman run --privileged fedora:38 \
-            dnf -y install git gcc-c++ libarrow-devel libarrow-glib-devel ruby-devel rubygem-bundler && \
+            dnf -y install git gcc-c++ libarrow-devel libarrow-glib-devel ruby-devel && \
             git clone https://github.com/heronshoes/red_amber.git && \
+            gem install bundler && \
             cd red_amber && \
             bundle install #&& \
             #TZ=Asia/Tokyo bundle exec rake test # set TZ to ensure the test using timestamp
