--- a/.github/workflows/fedora.yml
+++ b/.github/workflows/fedora.yml
@@ -20,6 +20,7 @@ jobs:
           podman run --privileged fedora:38 \
             dnf -y install git gcc-c++ libarrow-devel libarrow-glib-devel ruby-devel && \
             git clone https://github.com/heronshoes/red_amber.git && \
+            gem sources && \
             gem install --local bundler && \
             cd red_amber && \
             bundle install --local #&& \
