--- a/.github/workflows/fedora.yml
+++ b/.github/workflows/fedora.yml
@@ -18,11 +18,10 @@ jobs:
           podman images
           podman --version
           podman run --privileged fedora:38 \
-            dnf -y install git gcc-c++ libarrow-devel libarrow-glib-devel ruby-devel && \
+            dnf -y install git gcc-c++ libarrow-devel libarrow-glib-devel ruby-devel rubygem-bundler && \
             git clone https://github.com/heronshoes/red_amber.git && \
-            gem sources && \
-            gem install --local bundler && \
             cd red_amber && \
+            bundle --version && \
             bundle install --local #&& \
             #TZ=Asia/Tokyo bundle exec rake test # set TZ to ensure the test using timestamp
           #echo 'FROM fedora:38' >> Dockerfile
