--- a/.github/workflows/fedora.yml
+++ b/.github/workflows/fedora.yml
@@ -21,8 +21,9 @@ jobs:
             dnf -y install git gcc-c++ libarrow-devel libarrow-glib-devel ruby-devel rubygem-bundler && \
             git clone https://github.com/heronshoes/red_amber.git && \
             cd red_amber && \
-            /usr/bin/bundle --version && \
-            /usr/bin/bundle install --local #&& \
+            ls /usr/bin && \
+            bundle --version && \
+            bundle install --local #&& \
             #TZ=Asia/Tokyo bundle exec rake test # set TZ to ensure the test using timestamp
           #echo 'FROM fedora:38' >> Dockerfile
           #echo 'RUN echo $PWD' >> Dockerfile
