--- a/.github/workflows/fedora.yml
+++ b/.github/workflows/fedora.yml
@@ -21,7 +21,7 @@ jobs:
             dnf -y install git gcc-c++ libarrow-devel libarrow-glib-devel ruby-devel rubygem-bundler && \
             git clone https://github.com/heronshoes/red_amber.git && \
             cd red_amber && \
-            ls /usr/bin && \
+            ls /usr/local/bin && \
             bundle --version && \
             bundle install --local #&& \
             #TZ=Asia/Tokyo bundle exec rake test # set TZ to ensure the test using timestamp
