--- a/.github/workflows/fedora.yml
+++ b/.github/workflows/fedora.yml
@@ -17,23 +17,23 @@ jobs:
         run: |
           podman images
           podman --version
-          podman run --privileged fedora:38 \
-            dnf -y install git gcc-c++ libarrow-devel libarrow-glib-devel ruby-devel rubygem-bundler && \
-            git clone https://github.com/heronshoes/red_amber.git && \
-            cd red_amber && \
-            ls /usr/local/bin && \
-            bundle --version && \
-            bundle install --local #&& \
-            #TZ=Asia/Tokyo bundle exec rake test # set TZ to ensure the test using timestamp
-          #echo 'FROM fedora:38' >> Dockerfile
+          #podman run --privileged fedora:38 \
+          #  dnf -y install git gcc-c++ libarrow-devel libarrow-glib-devel ruby-devel rubygem-bundler && \
+          #  git clone https://github.com/heronshoes/red_amber.git && \
+          #  cd red_amber && \
+          #  ls /usr/local/bin && \
+          #  bundle --version && \
+          #  bundle install --local #&& \
+          # TZ=Asia/Tokyo bundle exec rake test # set TZ to ensure the test using timestamp
+          echo 'FROM fedora:38' >> Dockerfile
           #echo 'RUN echo $PWD' >> Dockerfile
           #echo 'RUN sudo dnf -y update' >> Dockerfile
-          #echo 'WORKDIR /' >> Dockerfile
-          #echo 'RUN sudo dnf -y install git gcc-c++ libarrow-devel libarrow-glib-devel ruby-devel' >> Dockerfile
-          #echo 'RUN sudo dnf clean all' >> Dockerfile
-          #echo 'RUN git clone https://github.com/heronshoes/red_amber.git' >> Dockerfile
-          #echo 'RUN cd red_amber' >> Dockerfile
-          #echo 'RUN bundle install' >> Dockerfile
-          #echo 'RUN TZ=Asia/Tokyo bundle exec rake test' >> Dockerfile # set TZ to ensure the test using timestamp
-          #sudo podman build --tag fedora:38test -f ./Dockerfile
-          #sudo podman run --name fedora38-test -rm fedora:38test
+          echo 'WORKDIR /' >> Dockerfile
+          echo 'RUN dnf -y install git gcc-c++ libarrow-devel libarrow-glib-devel ruby-devel' >> Dockerfile
+          echo 'RUN dnf clean all' >> Dockerfile
+          echo 'RUN git clone https://github.com/heronshoes/red_amber.git' >> Dockerfile
+          echo 'RUN cd red_amber' >> Dockerfile
+          echo 'RUN bundle install' >> Dockerfile
+          echo 'RUN TZ=Asia/Tokyo bundle exec rake test' >> Dockerfile # set TZ to ensure the test using timestamp
+          podman build --tag fedora38test -f ./Dockerfile
+          podman run --name fedora38-test -rm fedora38test
