--- a/.github/workflows/fedora.yml
+++ b/.github/workflows/fedora.yml
@@ -33,7 +33,8 @@ jobs:
           echo 'RUN dnf clean all' >> Dockerfile
           echo 'RUN git clone https://github.com/heronshoes/red_amber.git' >> Dockerfile
           echo 'RUN cd red_amber' >> Dockerfile
-          echo 'RUN bundle install' >> Dockerfile
+          echo 'RUN ls' >> Dockerfile
+          echo 'RUN bundle install --local' >> Dockerfile
           echo 'RUN TZ=Asia/Tokyo bundle exec rake test' >> Dockerfile # set TZ to ensure the test using timestamp
           podman build --tag fedora38test -f ./Dockerfile
           podman run --name fedora38-test -rm fedora38test
