--- a/.github/workflows/fedora.yml
+++ b/.github/workflows/fedora.yml
@@ -32,7 +32,8 @@ jobs:
           echo 'RUN dnf -y install git gcc-c++ libarrow-devel libarrow-glib-devel ruby-devel' >> Dockerfile
           echo 'RUN dnf clean all' >> Dockerfile
           echo 'RUN git clone https://github.com/heronshoes/red_amber.git' >> Dockerfile
-          echo 'RUN cd red_amber' >> Dockerfile
+          echo 'RUN ls' >> Dockerfile
+          echo 'WORKDIR /red_amber' >> Dockerfile
           echo 'RUN ls' >> Dockerfile
           echo 'RUN bundle install --local' >> Dockerfile
           echo 'RUN TZ=Asia/Tokyo bundle exec rake test' >> Dockerfile # set TZ to ensure the test using timestamp
