--- a/.github/workflows/fedora.yml
+++ b/.github/workflows/fedora.yml
@@ -18,7 +18,7 @@ jobs:
           echo 'FROM fedora:38' >> podmanfile
           echo 'RUN dnf -y update' >> podmanfile
           echo 'WORKDIR /' >> podmanfile
-          echo 'RUN dnf -y install git gcc-c++ libarrow-devel libarrow-glib-devel ruby-devel' >> Dockerfile
+          echo 'RUN dnf -y install git gcc-c++ libarrow-devel libarrow-glib-devel ruby-devel' >> podmanfile
           echo 'RUN dnf clean all' >> podmanfile
           echo 'RUN git clone https://github.com/heronshoes/red_amber.git' >> podmanfile
           echo 'WORKDIR /red_amber' >> podmanfile
